<resources>
    <string name="app_name">Budget</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="date">Date:</string>

    <string name="money_spend">Spend</string>
    <string name="money_income">Income</string>

    <!-- Main activity -->
    <string name="category_image_content_description">Category image</string>
    <string name="sample_transaction_name">MAGNIT</string>
    <string name="sample_transaction_value">-14000</string>
    <string name="sample_transaction_date">15/03/19 08:27</string>
    <string name="sample_transaction_category">Food</string>


    <!-- transaction categories -->
    <string name="empty_category">Without category</string>
    <string name="food_category">Food</string>
    <string name="medicine_category">Medicine</string>
    <string name="clothes_category">Clothes</string>
    <string name="home_category">Home</string>
    <string name="credit_category">Credit</string>

    <!-- currencies -->
    <string name="rouble_short">RUB</string>
    <string name="rouble_fullname">Rouble</string>
    <string name="dollar_short">USD</string>
    <string name="dollar_fullname">U.S. Dollar</string>
    <string name="euro_short">EUR</string>
    <string name="euro_fullname">Euro</string>

    <!-- exception messages -->
</resources>
